Add bucket provider mechanism